Add GC logging to Cluster Operator (#430) (#2)